Archive2/4c/f8d6ad7c39ca3b/output
main.cpp:25:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
main.cpp:5:15: warning: unused variable 'n3' [-Wunused-variable]
    int const n3 = 0;     // const object (same as n2)
              ^
main.cpp:22:16: warning: unused variable 'r2' [-Wunused-variable]
    const int& r2 = n2; // reference to const bound to const object
               ^
2 warnings and 1 error generated.
